@@ -5,9 +5,10 @@ class ScaffoldGenerator < Rails::Generator::NamedBase
                 :controller_class_nesting,
                 :controller_class_nesting_depth,
                 :controller_class_name,
+                :controller_underscore_name,
                 :controller_singular_name,
                 :controller_plural_name
-  alias_method  :controller_file_name,  :controller_singular_name
+  alias_method  :controller_file_name,  :controller_underscore_name
   alias_method  :controller_table_name, :controller_plural_name
 
   def initialize(runtime_args, runtime_options = {})
@@ -16,8 +17,8 @@ class ScaffoldGenerator < Rails::Generator::NamedBase
     @controller_name = @name.pluralize
 
     base_name, @controller_class_path, @controller_file_path, @controller_class_nesting, @controller_class_nesting_depth = extract_modules(@controller_name)
-    @controller_class_name_without_nesting, @controller_singular_name, @controller_plural_name = inflect_names(base_name)
-
+    @controller_class_name_without_nesting, @controller_underscore_name, @controller_plural_name = inflect_names(base_name)
+    @controller_singular_name=base_name.singularize
     if @controller_class_nesting.empty?
       @controller_class_name = @controller_class_name_without_nesting
     else
