@@ -1,5 +1,7 @@
 *SVN*
 
+* Scaffold generator tests.  #8443 [pelle]
+
 * Generated scaffold functional tests use assert_difference.  #8421 [norbert]
 
 * Update to Prototype 1.5.1.  [Sam Stephenson]
